# vroom

./: .gitignore  CMakeLists.txt
cmake/: FindAsio.cmake
docs/: building_cmake.md
libvroom_examples/: CMakeLists.txt  libvroom.cpp
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt
src/algorithms/heuristics/: CMakeLists.txt
src/algorithms/local_search/: CMakeLists.txt
src/algorithms/validation/: CMakeLists.txt
src/problems/: CMakeLists.txt
src/problems/cvrp/: CMakeLists.txt
src/problems/tsp/: CMakeLists.txt
src/problems/tsp/heuristics/: CMakeLists.txt
src/problems/vrptw/: CMakeLists.txt
src/problems/vrptw/operators/: CMakeLists.txt
src/routing/: CMakeLists.txt
src/structures/: CMakeLists.txt
src/structures/generic/: CMakeLists.txt
src/structures/vroom/: CMakeLists.txt
src/structures/vroom/input/: CMakeLists.txt
src/structures/vroom/solution/: CMakeLists.txt
src/utils/: CMakeLists.txt
